--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -1,8 +1,13 @@
+
 @import "bootstrap/config";
 @import "util";
 @import "app/app";
-@import "app/input";
+@import "app/footer";
 @import "app/login";
 @import "app/menu";
 @import "app/widget";
 @import "app/notification";
+@import "app/page";
+@import "app/content";
+@import "app/messages";
+@import "app/breadcrumb";
