--- a/src/scss/app/_app.scss
+++ b/src/scss/app/_app.scss
@@ -1,3 +1,12 @@
+@import "widget";
+@import "page";
+@import "breadcrumb";
+@import "login";
+@import "menu";
+@import "notification";
+@import "footer";
+@import "content";
+@import "messages";
 
 html {
   font-size: 13px;
